--- a/experimentation_tools.ipynb
+++ b/experimentation_tools.ipynb
@@ -23,7 +23,7 @@
    "id": "empty-title",
    "metadata": {},
    "source": [
-    "# Sensight code"
+    "# Query processing code"
    ]
   },
   {
